crates/pgls_pretty_print/tests/snapshots/single/tests__merge_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/merge_stmt_0_60.sql
snapshot_kind: text
---
MERGE INTO target_table
AS t
USING source_table
AS s ON t.id =
s.id
WHEN MATCHED
THEN UPDATE SET value = s.value
WHEN NOT MATCHED BY TARGET
THEN INSERT (id,
value)
VALUES (
  s.id,
  s.value);
