crates/pgls_pretty_print/tests/snapshots/single/tests__merge_support_func_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/merge_support_func_0.sql
snapshot_kind: text
---
MERGE INTO products AS p
USING new_products AS np
ON p.product_id = np.product_id
WHEN MATCHED THEN UPDATE SET price = np.price
WHEN NOT MATCHED BY TARGET
THEN INSERT
VALUES (np.product_id, np.price);
